--- a/config.toml
+++ b/config.toml
@@ -7,9 +7,12 @@ metaDataFormat = "yaml"
 pygmentsStyle = "trac"
 pygmentsUseClasses = true
 pygmentsCodeFences = true
-pygmentsCodefencesGuessSyntax = true 
-PaginatePath = true
-googleAnalytics = "UA-156062463-1"  
+pygmentsCodefencesGuessSyntax = true
+#pygmentsUseClassic = true
+#pygmentOptions = "linenos=inline"
+#disqusShortname = "XXX"
+#googleAnalytics = "XXX"
+enableRobotsTXT = true
 Paginate = 6
 
 [Params] 
@@ -38,8 +41,31 @@ pagination = "9"
   name = "Bino Kochumol Varghese"
   website = "https://www.binovarghese.com"
   email = "sample@gmail.com"
-  instagram = "#"
-  facebook = "#"
+  facebook = "username"
+  instagram = "username"
+  youtube = "user/username" # or channel/channelname
+  twitter = "username"
+  linkedin = "username"
+  github = "username"
+  #gitlab = "username"
+  #bitbucket = "username"
+  #reddit = "username"
+  #xing = "username"
+  #stackoverflow = "users/XXXXXXX/username"
+  #snapchat = "username"
+  #soundcloud = "username"
+  #spotify = "username"
+  #bandcamp = "username"
+  #itchio = "username"
+  #vk = "username"
+  #paypal = "username"
+  #telegram = "username"
+  #500px = "username"
+  #codepen = "username"
+  #mastodon = "url"
+  #kaggle = "username"
+  #weibo = "username"
+  #slack = "username"
 
 [[menu.main]]
     name = "Home"
@@ -51,11 +77,10 @@ pagination = "9"
     url = "/haiku/"
     weight = 2
 
-
 [[menu.main]]
     name = "About"
     url = "/about"
-    weight = 4
+    weight = 3
 
 
 
