- migrated to Bootstrap 5 - Added caruosel to show feature posts - Minor other design fixs

--- a/config.toml
+++ b/config.toml
@@ -75,13 +75,13 @@ pagination = "9"
     weight = 1
 
 [[menu.main]]
-    name = "Haiku"
-    url = "/haiku/"
+    name = "Notes"
+    url = "/notes/"
     weight = 2
 
 [[menu.main]]
     name = "About"
-    url = "/about"
+    url = "/about/"
     weight = 3
 
 
