author website updated

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -40,7 +40,7 @@ pagination = "10"
 
 [Author]
   name = "Bino Kochumol Varghese"
-  website = "https://www.codbix.com"
+  website = "https://binovarghese.com/"
   email = "sample@gmail.com"
   facebook = "username"
   instagram = "username"
