--- a/theme.toml
+++ b/theme.toml
@@ -5,14 +5,14 @@ name = "Lightbi"
 license = "MIT"
 licenselink = "https://github.com/binokochumolvarghese/lightbi-hugo/blob/master/LICENSE"
 description = ""
-homepage = "https://www.codbix.com/"
+homepage = "https://binovarghese.com/"
 tags = ["blog", "company", "portfolio", "projects", "minimal", "responsive", "seo", "google analytics", "bootstrap", "light", "syntax highlighting", "multilingual", "portfolio", "projects", "mobile", "technical"]
 features = ["blog", "company", "portfolio", "projects", "minimal", "responsive", "seo", "google analytics", "bootstrap", "light", "syntax highlighting", "multilingual", "portfolio", "projects", "mobile", "technical"]
 min_version = "0.41.0"
 
 [author]
   name = "Bino Kochumol Varghese"
-  homepage = "https://www.codbix.com/"
+  homepage = "https://binovarghese.com/"
 
 # If porting an existing theme
 [original]
