--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -84,9 +84,14 @@ pagination = "10"
     weight = 3
 
 [[menu.main]]
+    name = "Collections"
+    url = "/collections/"
+    weight = 4
+
+[[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 4
+    weight = 5
 
 
 
