--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -29,7 +29,7 @@ delayDisqus = true
 showRelatedPosts = true
 summaryLength  = "9"
 gcse = false
-Lastmod = false
+lastmod = false
 rss = false
 pagination = "10"
 hideAuthor = false
