Enabled lunr search for example site

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -28,7 +28,7 @@ socialShare = true
 delayDisqus = true
 showRelatedPosts = true
 summaryLength  = "9"
-gcse = false
+lunrSearch = true
 Lastmod = false
 rss = false
 pagination = "10"
