--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -47,34 +47,34 @@ previewCardImagePlacement = "bottom"
 
 [Author]
   name = "Bino Kochumol Varghese"
-  website = "https://binovarghese.com/"
+  website = "https://binovarghese.com"
   email = "sample@gmail.com"
   facebook = "username"
   instagram = "username"
   youtube = "user/username" # or channel/channelname
   twitter = "username"
-  threads = "username"
   linkedin = "username"
   github = "username"
-  #gitlab = "username"
-  #bitbucket = "username"
-  #reddit = "username"
-  #xing = "username"
-  #stackoverflow = "users/XXXXXXX/username"
-  #snapchat = "username"
-  #soundcloud = "username"
-  #spotify = "username"
+  threads = "username"
+  gitlab = "username"
+  reddit = "username"
+  stackoverflow = "users/XXXXXXX/username"
+  snapchat = "username"
+  spotify = "username"
+  paypal = "username"
+  telegram = "username"
+  mastodon = "url"
+  slack = "username"
   #bandcamp = "username"
   #itchio = "username"
   #vk = "username"
-  #paypal = "username"
-  #telegram = "username"
   #500px = "username"
-  #codepen = "username"
-  #mastodon = "url"
   #kaggle = "username"
   #weibo = "username"
-  #slack = "username"
+  #xing = "username"
+  #bitbucket = "username"
+  #soundcloud = "username"
+  # codepen = "username"
 
 [[menu.main]]
     name = "Home"
