--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -42,7 +42,7 @@ previewCardImagePlacement = "bottom"
 [Params.Author]
   name = "Bino Kochumol Varghese"
   website = "https://www.binovarghese.com/"
-  authorInfo = ""Live your life as though every moment matters, because in the end, it's not the years in your life, but the life in your years that counts.""
+  authorInfo = "Live your life as though every moment matters, because in the end, it's not the years in your life, but the life in your years that counts."
   authorPostImage = "/img/author-post-img.jpg"
 
 [Author]
