showPostImage parameter updated

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -41,6 +41,7 @@ pagination = "10"
 hideAuthor = false
 description="Your can add your website description here."
 previewCardImagePlacement = "bottom"
+showPostImage = false
 
 [Params.Author]
   name = "Bino Kochumol Varghese"
