--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,54 +1,56 @@
-baseURL = "https://lightbi-hugo-theme.netlify.app/"
-DefaultContentLanguage = "en"
-defaultContentLanguageInSubdir = false
-languageCode = "en-us"
+baseURL = "https://lightbi-beta-demo.netlify.app/"
+languageCode = "en"
 title = "Lightbi"
 theme = "lightbi-hugo"
+summaryLength  = "30"
 metaDataFormat = "yaml"
 pygmentsStyle = "trac"
-#pygmentsUseClasses = true
-#pygmentsCodeFences = true
+pygmentsUseClasses = true
+pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
-#pygmentsUseClassic = true
-#pygmentOptions = "linenos=inline"
-#disqusShortname = "XXX"
+pygmentsUseClassic = true
+pygmentOptions = "linenos=inline"
 #googleAnalytics = "XXX"
 enableRobotsTXT = true
 enableGitInfo = false
-summaryLength  = "30"
 ignoreLogs = ['warning-goldmark-raw-html']
 
-[pagination]
-pagerSize = 6
 
 [Params]
 selfHosted = true
-mainSections = ["post","posts"]
+mainSections = ["posts"]
 dateFormat = "02 January 2006"
 comments = false
 readingTime = false
 wordCount = false
+hideAuthor = false
 useHLJS = true
 socialShare = true
 delayDisqus = true
-showRelatedPosts = true
-summaryLength  = "9"
-lunrSearch = true
+showRelatedPosts = true 
 gcse = false
-lastmod = false
-rss = false
+Lastmod = false
+rss = true 
 pagination = "10"
-hideAuthor = false
 description="Your can add your website description here."
+lunrSearch = true
 previewCardImagePlacement = "bottom"
-showPostImage = false
+hidePostImage = false
+tagSubtitle = "Here, you’ll discover the latest notes that explore new insights, and unique perspectives on the world."
+homepageLayout = "profile" #blog
+profileShortbio = "I’m passionate about the web platform and love creating for the web. Here, you'll find a mix of long essays, quick notes, and personal reflections on what I’ve learned throughout my journey."
+profilePhoto = "img/profile/home-profile-pic.jpg"
+
+[pagination]
+pagerSize = 6
+
+
 
 [Params.Author]
   name = "Bino Kochumol Varghese"
   website = "https://www.binovarghese.com/"
-  authorInfo = "Live your life as though every moment matters, because in the end, it's not the years in your life, but the life in your years that counts."
+  authorInfo = "Give everything for your dreams."
   authorPostImage = "/img/author-post-img.jpg"
-  email = "sample@gmail.com"
   facebook = "username"
   instagram = "username"
   youtube = "user/username" # or channel/channelname
@@ -76,34 +78,36 @@ showPostImage = false
   #soundcloud = "username"
   # codepen = "username"
 
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
+
+
 [[menu.main]]
     name = "Home"
     url = "/"
     weight = 1
 
 [[menu.main]]
-    name = "Notes"
-    url = "/notes/"
+    name = "Blog"
+    url = "/posts/"
     weight = 2
 
 [[menu.main]]
-    name = "Tags"
-    url = "/tags/blog/"
+    name = "Notes"
+    url = "/notes/"
     weight = 3
 
 [[menu.main]]
-    name = "Collections"
-    url = "/collections/"
+    name = "Tags"
+    url = "/tags/"
     weight = 4
+
 
 [[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 5
+    weight = 6
 
-
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
 
